[tool.poetry]
name = "pubmedfetch"
version = "0.1.0"
description = "Retrieve article records from PubMed"
authors = ["Jeffrey Wong <jvwong@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datadir = "^1.3.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
