[tool.poetry]
name = "ncbiutils"
version = "0.5.1"
description = "Retrieve article records from NCBI via E-utilities"
license = "MIT"
authors = ["Biofactoid <support@biofactoid.org>"]
maintainers = ["Biofactoid <support@biofactoid.org>"]
readme = "README.md"
repository  = "https://github.com/PathwayCommons/ncbiutils"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
requests = "^2.27.1"
loguru = "^0.6.0"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-datadir = "^1.3.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"
responses = "^0.20.0"
pytest-mock = "^3.7.0"
mypy = "^0.950"
python-semantic-release = "^7.28.1"

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


